Bug 406409 - Regression: New tab behavior "Put New Tab After Current Tab" no longer works
Summary: Regression: New tab behavior "Put New Tab After Current Tab" no longer works
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-10 15:03 UTC by Oded Arbel
Modified: 2019-04-26 13:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen capture showing the problem. (157.42 KB, video/x-matroska)
2019-04-10 15:03 UTC, Oded Arbel
Details
attachment-27874-0.html (1.06 KB, text/html)
2019-04-10 16:43 UTC, tcanabrava
Details
attachment-13780-0.html (1.02 KB, text/html)
2019-04-11 08:33 UTC, tcanabrava
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oded Arbel 2019-04-10 15:03:17 UTC
SUMMARY

In Konsole 19.07.70 (from Kubuntu staging CI PPA), the setting TabBar -> Behavior -> New tab behavior no longer works: any chosen option causes the new tab to appear at the end of the TabBar.


STEPS TO REPRODUCE
1. Start Konsole
2. Create a few tabs
3. Open "Settings" -> "Configure Konsole" -> "TabBar" and under "Behavior" make sure "Put New Tab After Current Tab" is selected.
4. Select the first tab.
5. Hit CTRL+SHIFT+T to create a new tab, or select "File" -> "New Tab" from the menu.

OBSERVED RESULT

The new tab is created in the end of the TabBar

EXPECTED RESULT

The new tab should be created immediately following the currently selected tab.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Ubuntu disco (development)
KDE Plasma Version: 5.15.80
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.2

See attached screencast
Comment 1 Oded Arbel 2019-04-10 15:03:38 UTC
Created attachment 119335 [details]
screen capture showing the problem.
Comment 2 Oded Arbel 2019-04-10 16:40:54 UTC
Also, this may or may not be related, but the keyboard shortcuts "Move Tab Left" and "Move Tab Right" do not work for me either. I can only change the order of tabs using the mouse.
Comment 3 tcanabrava 2019-04-10 16:43:26 UTC
Created attachment 119338 [details]
attachment-27874-0.html

The shortcuts where re introduced  today, can you verify that you are using
the correct shortcut against current master

Em qua, 10 de abr de 2019 às 18:41, Oded Arbel <bugzilla_noreply@kde.org>
escreveu:

> https://bugs.kde.org/show_bug.cgi?id=406409
>
> --- Comment #2 from Oded Arbel <oded@geek.co.il> ---
> Also, this may or may not be related, but the keyboard shortcuts "Move Tab
> Left" and "Move Tab Right" do not work for me either. I can only change the
> order of tabs using the mouse.
>
> --
> You are receiving this mail because:
> You are the assignee for the bug.
Comment 4 Christoph Feck 2019-04-10 20:05:47 UTC
How old is the staging PPA? I remember we lost the 'put tab after current' during the rewrite, but it was fixed and is working in master for several months, see https://cgit.kde.org/konsole.git/commit/?id=f5cc6d6c9061b88a7cfb38f7a48351fbef02ab17
Comment 5 Oded Arbel 2019-04-11 08:07:24 UTC
This test is on konsole from Kubuntu unstable CI (not staging, that was a mistake in the report).

I've updated Konsole this morning with version 4:19.03.70+p19.04+git20190411.0010-0 from https://launchpad.net/~kubuntu-ci/+archive/ubuntu/unstable/+build/16612314 , and the problem is still exhibited.

The report was originally produced on an older build, likely this: https://launchpad.net/~kubuntu-ci/+archive/ubuntu/unstable/+build/16602325

Considering the date in the commit you specified, and the reported git checkout date of the package (both builds), the application very likely contains that commit.
Comment 6 Oded Arbel 2019-04-11 08:16:14 UTC
(In reply to tcanabrava from comment #3)
> Created attachment 119338 [details]
> attachment-27874-0.html
> 
> The shortcuts where re introduced  today, can you verify that you are using
> the correct shortcut against current master

I'm not entirely sure, but I think I'm using this build from KCI: http://kci.pangea.pub/job/disco_unstable_konsole/40/changes (the timestamps match to the build record in Launchpad, and I don't see anything else it could be), which matches the current master. My installation was updated this morning and "move tab" shortcuts still don't work (other Konsole shortcuts do, though).
Comment 7 Christoph Feck 2019-04-11 08:22:44 UTC
Okey, my checkout is from Mar 20, so it is a recent regression.
Comment 8 tcanabrava 2019-04-11 08:33:18 UTC
Created attachment 119350 [details]
attachment-13780-0.html

I hope I’m fixing more bugs than I’m creating, but I’m looking at
everything seriously and I’ll fix the bugs I create in master, so don’t
worry.
Or better, help me find them in the code so I can fix sooner :)

Em qui, 11 de abr de 2019 às 10:22, Christoph Feck <bugzilla_noreply@kde.org>
escreveu:

> https://bugs.kde.org/show_bug.cgi?id=406409
>
> --- Comment #7 from Christoph Feck <cfeck@kde.org> ---
> Okey, my checkout is from Mar 20, so it is a recent regression.
>
> --
> You are receiving this mail because:
> You are the assignee for the bug.
Comment 9 Kurt Hindenburg 2019-04-26 13:50:01 UTC
Git commit 9680e1f5f1d55776f078448d62deb33883f45dcc by Kurt Hindenburg, on behalf of Thomas Surrel.
Committed on 26/04/2019 at 13:49.
Pushed by hindenburg into branch 'master'.

Fix New tab behavior

Summary:
Fix the regression about the placement of a new tab:
it is now added either at the end, or next to the
current tab depending on the setting.

Test Plan:
In Konsole settings, select 'Put new tab after the
current tab' for the New tab behavior setting.
Open some new tabs and check they are opened at the
proper position.

Reviewers: #konsole, hindenburg, tcanabrava

Reviewed By: tcanabrava

Subscribers: konsole-devel

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D20836

M  +1    -1    src/MainWindow.cpp
M  +10   -3    src/ViewContainer.cpp
M  +14   -1    src/ViewContainer.h
M  +0    -6    src/ViewManager.cpp
M  +0    -12   src/ViewManager.h

https://commits.kde.org/konsole/9680e1f5f1d55776f078448d62deb33883f45dcc